polished & optimized